<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.karatecounter.MainActivity">

    <ImageView
        android:layout_width="@dimen/login_small_image_x"
        android:layout_height="@dimen/login_small_image_y"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/karate"
        android:tint="@color/colorPrimary" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_contestant_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/label_padding"
                    android:text="@string/contestant_1"
                    android:textSize="@dimen/text_label_size" />
                <TextView
                    android:id="@+id/scoreContestant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@color/colorTextStandout"
                    android:textSize="@dimen/text_score_size" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:padding="@dimen/label_padding"
                        android:text="@string/penalties"
                        android:textSize="@dimen/text_label_size" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/penaltiesContestant1"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:padding="@dimen/label_padding">
                        <View
                            android:id="@+id/card1cont1"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                        <View
                            android:id="@+id/card2cont1"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                        <View
                            android:id="@+id/card3cont1"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                        <View
                            android:id="@+id/card4cont1"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/penaltiesContestant1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/label_padding"
                        android:paddingTop="@dimen/label_padding"
                        android:text="0" />
                </RelativeLayout>
                <Button
                    android:id="@+id/btnYukoPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:onClick="addOneForContestantOne_YUKO"
                    android:text="@string/one_point" />
                <Button
                    android:id="@+id/btnWazaAriPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:onClick="addTwoForContestantOne_WAZAARI"
                    android:text="@string/two_points" />
                <Button
                    android:id="@+id/btnIpponPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:onClick="addThreeForContestantOne_NIPPON"
                    android:text="@string/three_points" />
                <Button
                    android:id="@+id/btnPenaltyPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:layout_marginTop="@dimen/button_margin_vertical"
                    android:onClick="addPenaltyForContestantOne"
                    android:text="@string/penalty_button_text" />
            </LinearLayout>
            <View
                android:layout_width="@dimen/hair_line"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/vertical_divider_top_margin"
                android:background="@color/colorPrimary">
            </View>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_contestant_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/label_padding"
                    android:text="@string/contestant_2"
                    android:textSize="@dimen/text_label_size" />
                <TextView
                    android:id="@+id/scoreContestant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@color/colorTextStandout"
                    android:textSize="@dimen/text_score_size" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:padding="@dimen/label_padding"
                        android:text="@string/penalties"
                        android:textSize="@dimen/text_label_size" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/penaltiesContestant2"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:padding="@dimen/label_padding">
                        <View
                            android:id="@+id/card1cont2"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                        <View
                            android:id="@+id/card2cont2"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                        <View
                            android:id="@+id/card3cont2"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                        <View
                            android:id="@+id/card4cont2"
                            android:layout_width="@dimen/card_width"
                            android:layout_height="@dimen/card_height"
                            android:layout_margin="@dimen/penalty_card_margin"
                            android:background="@color/penaltyClear" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/penaltiesContestant2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/label_padding"
                        android:paddingTop="@dimen/label_padding"
                        android:text="0" />
                </RelativeLayout>
                <Button
                    android:id="@+id/btnYukoPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:onClick="addOneForContestantTwo_YUKO"
                    android:text="@string/one_point" />
                <Button
                    android:id="@+id/btnWazaAriPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:onClick="addTwoForContestantTwo_WAZAARI"
                    android:text="@string/two_points" />
                <Button
                    android:id="@+id/btnIpponPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:onClick="addThreeForContestantTwo_NIPPON"
                    android:text="@string/three_points" />
                <Button
                    android:id="@+id/btnPenaltyPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_margin_horizontal"
                    android:layout_marginRight="@dimen/button_margin_horizontal"
                    android:layout_marginTop="@dimen/button_margin_vertical"
                    android:onClick="addPenaltyForContestantTwo"
                    android:text="@string/penalty_button_text" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:layout_gravity="center">
            <Button
                android:id="@+id/button_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:onClick="newMatch"
                android:text="@string/new_match" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="@dimen/label_padding"
        android:paddingRight="@dimen/label_padding"
        android:text="@string/instructionsStr"
        android:textSize="@dimen/small_text" />
</RelativeLayout>
